--- a/content/uman 2022-03.md
+++ b/content/uman 2022-03.md
@@ -46,7 +46,7 @@ On a similar tangent, I wrote a very fruitful [[approach life with humor|note]] 
 
 ## Life Management System
 
-Inspired by my thinking about purpose and motivation this month, I realized that I need a more systematic way of tackling my goals. Through a journaling session, I wrote a draft of an outline of my life management system implementation. I then wrote a [[thoughts/how to build a life management system|note]] for this. On that note, I articulated what my reviews are meant to do. Now, I just have to think really deeply about project management. This will be a study project for April or May.
+Inspired by my thinking about purpose and motivation this month, I realized that I need a more systematic way of tackling my goals. Through a journaling session, I wrote a draft of an outline of my life management system implementation. I then wrote a [[how to build a life management system|note]] for this. On that note, I articulated what my reviews are meant to do. Now, I just have to think really deeply about project management. This will be a study project for April or May.
 
 ## Philosophy outside academia
 
