--- a/content/uman 2022-08.md
+++ b/content/uman 2022-08.md
@@ -118,7 +118,7 @@ Lastly, I wrote a lengthy Facebook post about why [[freelancing or entrepreneurs
 
 ## Digital Gardening
 
-As I said in the introduction, I spent a good amount of August thinking about and applying a different way of writing on the web. Earlier this year, I intended to learn web design and development. I took a course (which I haven't finished yet!). My goal was to redesign my website from the ground up. I also wanted to launch a customized website for the hundreds of processed and unprocessed notes in my [[Personal knowledge management]] system, notes I accumulated from years of reading, writing, and reflecting.
+As I said in the introduction, I spent a good amount of August thinking about and applying a different way of writing on the web. Earlier this year, I intended to learn web design and development. I took a course (which I haven't finished yet!). My goal was to redesign my website from the ground up. I also wanted to launch a customized website for the hundreds of processed and unprocessed notes in my [[personal knowledge management]] system, notes I accumulated from years of reading, writing, and reflecting.
 
 While researching for inspirations for the redesign, I cam across the website [100r.co](https://100r.co/site/home.html). Its authors treated the website as a personal wiki (an encyclopedia of their life while living in a boat and experimenting with a low-tech lifestyle). I became fascinated by the concept and wanted to turn my website into something similar, to distance myself from the time-bound chronological style of maintaining a site that also pressures one to produce and publish. Alas, I didn't have the coding skills to create one. I just learned how to use [Hugo](https://gohugo.io/), a static site generator, but I wasn't verse in the languages of coding: HTML, CSS, or JS. Because of this, I settled to old-school blogging, parked the project, and focused on my other interests like photography.
 
