--- a/content/2022-12-21 seeds.md
+++ b/content/2022-12-21 seeds.md
@@ -25,4 +25,4 @@ I created the following note:
 > 
 > 2. Doing the specific action
 > 
-> The first occurs in the [[sky level]] of the [[life management system]], while the latter occurs at the [[thoughts/ground level]]. [[living]] is about going back and forth between these two kinds of action. This back and forth makes sure that one is doing the right thing and doing it as present and mindful as possible.
+> The first occurs in the [[sky level]] of the [[life management system]], while the latter occurs at the [[ground level]]. [[living]] is about going back and forth between these two kinds of action. This back and forth makes sure that one is doing the right thing and doing it as present and mindful as possible.
