--- a/content/2023-10-30 seeds.md
+++ b/content/2023-10-30 seeds.md
@@ -4,7 +4,7 @@ date: 2023-10-31
 tags:
   - seeds
 ---
-- [[thoughts/self|self]]
+- [[self|self]]
 
 The person that is able to act is an aggregate of matter. If I am only a mind, a soul, then it is possible to think but not to act. Action involves the mind "intra-acting" with the body.
 
