--- a/content/uman 2022-08.md
+++ b/content/uman 2022-08.md
@@ -34,7 +34,7 @@ I was curious what would working for ten straight 12+ hour work days in exchange
 
 I discovered [[henry bugbee]] through his prolific student [[edward mooney]], while reading about [[henry david thoreau]] last month. The two Henries were similar as they both wrote works that could be classified as [[lyrical philosophy]], that is, philosophical texts that were written sans the rigid and dry language of most analytical philosophy but instead using literary techniques like narrative and verse. They are called lyrical because the use of the first person "I" is integral in this kind of philosophy. The experiences and point of view of the author is seminal in the work. It is a kind of philosophy I am playing around in the past couple of months. In fact, I already have some [[Ideas on how to explore lyrical philosophy in my work]]. Specifically, I would like to [[Combine analytical and lyrical philosophy in one practice]].
 
-Bugbee, like Thoreau, wrote relatively little and published even less. In fact, while Thoreau only published two books, Bugbee only published one—*[[the inward morning bugbee|The Inward Morning: A Philosophical Exploration in Journal Form]]*. It is a beautiful piece of writing, one that eludes simple description. I have only started to read its first 50 pages but I have to say it is a mix of deep, difficult prose and poetic, even entertaining stories. Lyrical, indeed. If you are curious, I started publishing [[thoughts/my commentaries on the inward morning by bugbee]].
+Bugbee, like Thoreau, wrote relatively little and published even less. In fact, while Thoreau only published two books, Bugbee only published one—*[[the inward morning bugbee|The Inward Morning: A Philosophical Exploration in Journal Form]]*. It is a beautiful piece of writing, one that eludes simple description. I have only started to read its first 50 pages but I have to say it is a mix of deep, difficult prose and poetic, even entertaining stories. Lyrical, indeed. If you are curious, I started publishing [[my commentaries on the inward morning by bugbee]].
 
 Since he is not a structured thinker, Bugbee can be difficult to understand. To help me "get" him, I read two excellent essays: ["Henry Bugbee: Thinker, Wanderer, Fly-fisherman"](https://www.athwart.org/thinker-wanderer-fly-fisherman-the-life-and-thought-of-henry-bugbee/) by Joseph Keegin and [Working Certainty and Deweyan Wisdom](https://www.degruyter.com/document/doi/10.1515/9780823285129-007/html) by Douglas Anderson. The introduction of his book written by his mentor [[Gabriel Marcel]] also helped as well as a [podcast](https://podcasts.apple.com/us/podcast/henry-bugbee-education-and-the-style-of-our-lives/id1566642840?i=1000556517541) about his essay "Education and the Style of Our Lives."
 
