--- a/content/2024-10-02 seeds.md
+++ b/content/2024-10-02 seeds.md
@@ -7,6 +7,9 @@ tags:
   - thoughts
   - seeds
 ---
+- [[jaywalking]]
+- [[pilgrimage]]
+
 Sa sandaling ito nangyayari ang lahat. Dito ka lang muna.
 
 History of jaywalking
