--- a/content/2024-10-15 seeds.md
+++ b/content/2024-10-15 seeds.md
@@ -27,7 +27,7 @@ Let my curiosities dictate each day's study. Trust in this long process. The tal
 
 Let go of this need to be efficient in your studies.
 
-As long as you are being selective of what you read and letting go of diving into subject matter that will distract you (FOCUS AND AUTHENTICITY applied in mu everyday studies), you'll be good.
+As long as you are being selective of what you read and letting go of diving into subject matter that will distract you (FOCUS AND AUTHENTICITY applied in my everyday studies), you'll be good.
 
 The documentation of the spiritual journey is the key. And that is why Thoreau journaled. But how did he arranged these together? And when did he knew he can start arranging?
 
