--- a/content/2024-10-28 seeds.md
+++ b/content/2024-10-28 seeds.md
@@ -18,13 +18,13 @@ Road Widening project abandoned at Lopez. What kind of spirituality will I get f
 
 It seems to me that everything we're trying to do here, consciously or unconsciously, is how to best be in place. A better building. A better road. A better bike or car to traverse the road. Even the fixing of these electric posts. A way of running away from discomfort. What is it with discomfort that we are willing to be hurt to be as far away from it as possible?
 
-Is the core of this discomfort uncertainity? The unknown? The throwness of existence?
+Is the core of this discomfort uncertainty? The unknown? The thrownness of existence?
 
-Perhaps, in a world so devoured by capitalism, it is impossible to hear the universe in the present. I need to read the past. To listent to the past for me to make sense of this present. Without this, everything is asphalt!
+Perhaps, in a world so devoured by capitalism, it is impossible to hear the universe in the present. I need to read the past. To listen to the past for me to make sense of this present. Without this, everything is asphalt!
 
 A tree is but revenge waiting to happen.
 An entire writing morning disrupted by the deafening sound of a chainsaw waiting to happen.
-An angry note against rhe electric company
+An angry note against the electric company
 A tree is a discontented seed.
 A seed that refuses to walk.
 A tree is a clearing, eventually.
