--- a/content/uman 2024-10.md
+++ b/content/uman 2024-10.md
@@ -14,7 +14,7 @@ An Itneg shaman renewing an offering to the spirit shield (1922, Philippines)
 
 1.1
 
-[[beckoning baguio labanye|Beckoning Baguio]]:
+[[ivan labanye|Ivan Labayne]], *[[beckoning baguio labanye|Beckoning Baguio]]*:
 
 Framed in lazy opposites, Manila would be the 9 p.m. start of the party, well-dressed and ready to take in all stimuli while Baguio would be past midnight, inebriated, dulled and possibly reflective, worn down and possibly more honest.
 
@@ -124,7 +124,7 @@ In addition, how can I build a writing life inspired by a spiritual quest, pract
 
 7.1
 
-[[andrew j brown|Andrew J. Brown]]:
+[Andrew J. Brown](https://andrewjbrown.blogspot.com/2024/10/all-hail-to-work-of-civilised-worm.html):
 
 [T]he civilised worm is always-already breaking up the soil of a compacted self in a way that doesn’t destroy its integrity as a self, but, instead, is opening it up to allow the inflowing of many new insights and ideas which begins to turn us into what Imaoka-sensei eventually came to call “cosmic human beings” (宇宙人*uchūjin*), i.e. human beings who are fully aware of the inter- and intra-connectedness of all things.
 
@@ -136,7 +136,7 @@ This [[ikigai]] and the [[self]] behind it is already here. I may not have artic
 
 ***
 
-7.1
+8.1
 
 [[herbert fingarette|Herbert Fingarette]]
 
@@ -146,7 +146,7 @@ These studies are outcomes rather than realised objectives. In making the journe
 
 An exhortation. When I find myself lost in tiny details, focused on execution over wondering and big-picture questions, I try to remind myself to _get curious._ My default mode, having spent so many years as a technologist, is to focus on _tasks,_ on _doing,_ on _accomplishing._ That’s often necessary to meaningful intellectual creative work, but it’s certainly not sufficient. Too much doing-focus will crowd out the expansive mindset which generates new insights. [It’s hard to hear yourself think](https://notes.andymatuschak.org/zWzVw2VM4TPjpKXnHUfLaso).
 
-7.2
+8.2
 
 [[my jiyu shukyo|My jiyū shūkyō]]:
 
@@ -164,13 +164,13 @@ In the creation of my jiyū shūkyō, I need to let go of this desire for bluepr
 
 ***
 
-8.1
+9.1
 
 [[isabelo de los reyes|Isabelo de los Reyes]]:
 
 The ancient chronicles of Jesuit and Hispanic friars say that upon the arrival of the first Spaniards, the coasts of the Visayas and even in Manila, there were many converts to Mohammedanism, and even more could be found in Mindanao that were converted by the islamic teachers from Borneo. So, if we are to find the true Philippine religion at its purest, we must look to the mountainous regions of the North. Knowing how to distinguish the True Religion from those that were influenced by the Hindu, Mohammedan and Christian grafts can be difficult, but the true Philippine religion is still intact, not only among the Itnegs (Tinguians), but in the legends, advices and superstitions of the Tagalog's, Visayan's, Bicolano's, Kapampangan's, Zambaleno's, Pangasinero's and other Filipino ethnic groups.
 
-8.2
+9.2
 
 Journal, 18 October 2024:
 
@@ -178,13 +178,13 @@ Precolonial Filipino spirituality had Hindu and Buddhist influence. There is som
 
 ***
 
-9.1
+10.1
 
 [Raymond Guess](https://thepointmag.com/examined-life/a-world-without-why/):
 
 So the experience I have of my everyday work environment is of a conformist, claustrophobic and repressive verbal universe, a penitential domain of reason-mongering in which hyperactivity in detail—the endlessly repeated shouts of "why," the rebuttals, calls for "evidence," qualifications and quibbles—stands in stark contrast to the immobility and self-referentiality of the structure as a whole. I suffer from recurrent bouts of nausea in the face of this densely woven tissue of "arguments," most of which are nothing but blinds for something else altogether, generally something unsavory; and I feel an urgent need to exit from it altogether.
 
-9.2
+10.2
 
 Journal, 31 October 2024:
 
